fix(preview): don't stretch images

--- a/assets/css/compose.css
+++ b/assets/css/compose.css
@@ -52,6 +52,7 @@
   max-width: 100px;
   height: auto;
   border-radius: 4px;
+  align-self: start;
 }
 
 @media screen and (min-width: 1240px) {
